# UCS-Hackathon-26

./: .gitignore  CLAUDE.md  PRD.md  PROGRESS.md  README.md  SETUP.md  multi_language_scanner.py  pyproject.toml  sample.js  sample.py  sample.ts  setup.py
backend/: .env  .env.example  checkmate.db  database.py  main.py  models.py  requirements.txt  seed_demo.py
backend/detectors/: __init__.py  base.py  dangerous_functions.py  secrets.py  sql_injection.py
backend/routes/: __init__.py  feedback.py  metrics.py  scan.py
checkmate/: __init__.py  cli.py  scanner.py
cli/: checkmate.py  multi_lang_scanner.py  scanner.py
cli/detectors/: __init__.py  base.py  dangerous_functions.py  secrets.py  sql_injection.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/components/: FlagCard.tsx  ScanHistory.tsx  WaitingForScan.tsx
dashboard/components/ui/: badge.tsx  button.tsx
dashboard/lib/: api.ts
data/: feedback.json  metrics.json  scan_history.json  scan_results.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/results/[scanId]/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/scans/: page.tsx
frontend/components/: CodeInput.tsx  FeedbackButtons.tsx  FlaggedResult.tsx  Footer.tsx  MetricsChart.tsx
frontend/lib/: api.ts
samples/: vulnerable.css  vulnerable.html  vulnerable_1.py  vulnerable_js.js  vulnerable_ts.ts
server/: main.py
